blocks no longer jump to bottom, basic modals added

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ header{
 }
 
 .post{
-    width: 40px;
+    width: 60px;
     background-color: gray;
     position: relative;
     margin-top: 10px;
@@ -32,26 +32,70 @@ header{
     position: static;
 }
 
+/* margin left = 50% (width - 30) */
 #block-1{
     background-color: red;
-    width: 40px;
-    margin-left: 0px
+    width: 80px;
+    margin-left: -10px
 }
 
 #block-2{
-    background-color: green;
-    width: 80px;
-    margin-left: -20px;
-}
-
-#block-3{
-    background-color: blue;
-    width: 90px;
+    background-color: orange;
+    width: 110px;
     margin-left: -25px;
 }
 
+#block-3{
+    background-color: green;
+    width: 140px;
+    margin-left: -40px;
+}
+
 #block-4{
-    background-color: purple;
-    width: 100px;
-    margin-left: -30px;
+    background-color: blue;
+    width: 170px;
+    margin-left: -55px;
+}
+
+/* modal design idea from w3 schools https://www.w3schools.com/howto/howto_css_modals.asp */
+#welcome-screen{
+    display: auto; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+#start-modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+#win-screen{
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+#win-modal-content{
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
 }
